[package]
name = "openapi_axum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aide = { version = "0.9.0", features = ["axum", "macros", "redoc"] }
axum = "0.6.1"
once_cell = "1.16.0"
schemars = "0.8.11"
serde = { version = "1.0.148", features = ["derive"] }
serde_json = "1.0.89"
serde_yaml = "0.9.14"
tokio = { version = "1.22.0", features = ["macros", "rt", "rt-multi-thread"] }
